# CCC

./: .dockerignore  .gitignore  .review-context.json  .task-context.json  AGENTS.md  ARCHITECTURE.md  CAPABILITIES.md  CCC  CHANGELOG.md  Cargo.toml  DIRECTIVES.md  Dockerfile  EXTERNAL_CONTRIBUTOR_TEST.md  GETTING_STARTED.md  HEARTBEAT.md  MEMORY.md  Makefile  README.md  SOUL.md  SPEC.md  TOOLS.md  acc-agent  brain-state.json  deck_review_rocky.md  docker-compose.yml  manifest  ollama-watchdog.mjs  package-lock.json  package.json  rockyandfriends  suraj_songs.txt
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml  wasm-build.yml
acc-cli/: Cargo.toml
acc-cli/src/: main.rs
acc-client/: Cargo.toml  README.md
acc-client/src/: agents.rs  auth.rs  bus.rs  chains.rs  error.rs  lib.rs  llm_config.rs  memory.rs  projects.rs  sessions.rs  tasks.rs
acc-client/tests/: bus_integration.rs  registry_integration.rs  tasks_integration.rs
acc-model/: Cargo.toml  README.md
acc-model/src/: agent.rs  bus.rs  lib.rs  memory.rs  project.rs  queue.rs  task.rs
acc-qdrant/: Cargo.toml
acc-qdrant/src/: client.rs  embed.rs  error.rs  lib.rs  types.rs  utils.rs
acc-server/: Cargo.toml  acc.example.json
acc-server/src/: blob_expiry.rs  brain.rs  bus_types.rs  config.rs  dag.rs  dashboard.html  db.rs  dispatch.rs  lib.rs  main.rs  state.rs  supervisor.rs  vault.rs
acc-server/tests/: acp_test.rs  agents_test.rs  auth_test.rs  blob_chunked_upload_test.rs  brain_test.rs  bus_multimedia_test.rs  bus_test.rs  chains_test.rs  conversations_test.rs  exec_test.rs  fs_test.rs  geek_test.rs  health_test.rs  issues_test.rs  lessons_test.rs  memory_test.rs  metrics_test.rs  models_test.rs  peer_exchange_test.rs  projects_test.rs  providers_test.rs  queue_test.rs  secrets_test.rs  services_test.rs  setup_test.rs  soul_test.rs  supervisor_test.rs  tasks_test.rs  ui_test.rs
agent/acc-agent/: Cargo.toml
agentOS/docs/: ARCHITECTURE.md  LIVE-MIGRATION.md
agentbus/: SPEC.md
agentbus/plugin/: README.md  openclaw.plugin.json
ccc/: AUDIT.md  ONBOARDING.md
ccc-server/src/: config.rs  db.rs  main.rs
ccc/clawchat/: Cargo.toml  Trunk.toml  index.html
ccc/clawchat/src/: main.rs  types.rs
ccc/clawchat/src/components/: input_bar.rs  login.rs  message_pane.rs  mod.rs  sidebar.rs
ccc/clawchat/style/: clawchat.css
ccc/dashboard/: Cargo.toml  Makefile
ccc/sbom/: rocky.json  rocky.sbom.json
ccc/scripts/: clawfs-metrics-push.mjs  ollama-watchdog.sh
ccc/tests/: BUGS.md
clawbus/: SPEC.md
clawbus/plugin/: README.md
clients/: README.md
clients/python/: README.md
clients/python/acc_client/: README.md  pyproject.toml
clients/python/acc_client/acc_client/: __init__.py  _agents.py  _auth.py  _bus.py  _items.py  _memory.py  _projects.py  _queue.py  _tasks.py  client.py
clients/python/acc_client/tests/: __init__.py  conftest.py  test_auth.py  test_bus.py  test_client.py  test_errors.py  test_subapis.py  test_tasks.py
dashboard/: README.md  server.mjs
dashboard/test/: api.test.mjs
data/: exec.jsonl
deploy/: .env.server.template  .env.template  README.md  acc-init.sh  acc-repo-sync.service  acc-repo-sync.sh  agent-pull.sh  bootstrap.sh  bus-listener.sh  ccc-connectivity-check.sh  ccc-init.sh  ccc-repo-sync.service  ccc-repo-sync.sh  ccc-repo-sync.timer  claw-watchdog.sh  clawfs.service  commands.json  crontab-acc.txt  crontab-ccc.txt  fix-dns-bullwinkle.sh  fix-hermes-config.sh  fleet-sync.sh  hermes-driver.py  install-queue-worker.sh  migrate.sh  nvidia-proxy.py  push-agentfs-sync.sh  queue-worker.py  rcc-connectivity-check.sh  rcc-init.sh  rebuild-changed.sh  reconcile-hub-supervisor.sh  register-agent.sh  restart-agent.sh  restart-fleet.sh  restart-hub.sh  rotate-rocky-hub-tokens.sh  run-migrations.sh  secrets-sync.sh  services-blacklist.json  (+6 more)
deploy/consul/: README.md
deploy/launchd/: com.acc.accfs-mount.plist.tmpl  com.acc.agent.plist  com.acc.task-worker.plist  com.ccc.agent.plist  com.ccc.claude-main.plist  com.ccc.queue-worker.plist
deploy/migrations/: 0001_install-dispatch-release.sh  (+8 more)
docs/: PUBLISH-RFC-001.md  acc-client.md  accfs.md  clawfs.md  gateway-local-routing-rfc.md  quench-protocol.md  rcc-executor-design.md  scope-decision-3d-asset-bus-routing.md  token-bus-architecture.md  workflow-runbook.md
grievances/: alexb.txt  grievances.db
hermes/: hermes  run_agent.py
lib/: CRASH_REPORTING.md  crash-reporter.mjs  systemd-crash-hook.sh
offline-heartbeat/: server.mjs
onboarding/: ONBOARD_NEW_AGENT.md
public-www/: index.html
rcc/: AUDIT.md  ONBOARDING.md  PROJECTS_AS_FIRST_CLASS.md  REFACTOR_SCOPE.md  RUST_MIGRATION_SPEC.md  SHARED-INFRA-DESIGN-2026-04-02.md  SOA-AUDIT-2026-04-02.md  audit.md
rcc-hub/: README.md  install-agent.sh  install-hub.sh  package.json
rfc/: PUBLISH-RFC-001.md
scripts/: branch-audit.mjs  cifs-mount-health.sh  cron-fleet-monitor.py  deploy-model.sh  fleet-health-check.py  fuse-watchdog.service  github_sync.py  gpu-anomaly-check.mjs  install-acc.sh  memory-git-commit.sh  onboard-sweden-agent.sh  phase-commit.sh  release.sh  serendipity-capture.sh  slack-channel-ingest.py  stale-task-watchdog.py
skills/: config.yaml
slack-reflector/: Cargo.toml  README.md  config.example.yaml
slack-reflector/src/: cache.rs  config.rs  health.rs  main.rs  reflector.rs  slack_api.rs  socket_mode.rs  thread_map.rs
squirrelbus/: SPEC.md  dead-letter.jsonl  receive-server.mjs
squirrelbus-plugin/: README.md  index.js  openclaw.plugin.json  package.json
squirrelchat/: API.md  package-lock.json  package.json  server.mjs
tasks/: plan.md  todo.md
tests/: probe.py
tools/: Cargo.toml
tools/src/: lib.rs
workqueue/: PROJECT_SCHEMA.md  README.md  SCHEMA.md  WORKQUEUE_AGENT.md  WORKQUEUE_AGENT_BORIS.md  WORKQUEUE_AGENT_NATASHA.md  agent-registry.json  heartbeats.jsonl  jkh-state-seed.json  memory-digest-natasha-2026-W12.md  operator-state-seed.json  queue.json  queue.json.bak-20260329  storage-topology-recommendation.md  wq-CCC-audit-001.json  wq-RCC-audit-001.json  wq-RCC-rust-migration-001.json  wq-SC-auth-001.json  wq-api.mjs
(+361 files in other folders)
