[workspace]
resolver = "2"
# Workspace members (Epic: shared ACC client libraries)
# ─────────────────────────────────────────────────────
# acc-model      — shared wire types (no network, no async); used by server +
#                  both client crates. Single source of truth for BusMsg,
#                  Task, QueueItem, Agent, MemoryHit, etc.
# acc-client     — async Rust HTTP client; depends on acc-model. Mirrors the
#                  Python acc-client package in structure and wire behaviour.
# acc-cli        — acc binary; drives acc-client for human / script use.
# acc-server     — hub API; depends on acc-model for the same wire types.
# agent/acc-agent — fleet node agent; depends on acc-client + acc-model.
members = [
    "acc-cli",
    "acc-server",
    "agent/acc-agent",
    "acc-model",
    "acc-client",
]

# Shared versions for deps used by 2+ members. Members opt in via
# `<dep>.workspace = true` and may add (not override) features locally.
# reqwest is intentionally omitted: the agent needs rustls-tls with
# default-features = false, which can't be overridden at the member level.
[workspace.dependencies]
tokio          = { version = "1",    features = ["full"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-journald   = "0.3"
serde          = { version = "1",    features = ["derive"] }
serde_json     = "1"
chrono         = { version = "0.4",  features = ["serde"] }
futures-util   = "0.3"
tokio-util     = { version = "0.7",  features = ["io"] }
axum           = "0.7"
hmac           = "0.12"
sha2           = "0.10"
subtle         = "2"
base64         = "0.22"
hex            = "0.4"
bytes          = "1"
http-body-util = "0.1"
thiserror      = "1"
async-stream   = "0.3"
serial_test    = "3"

# Thin LTO is cheap enough to apply workspace-wide and recovers most of the
# size win of full LTO. Per-package settings scope size-optimization to
# acc-agent (distributed to every fleet node) while letting acc-server keep
# its debug symbols for production stack traces.
[profile.release]
lto = "thin"

[profile.release.package.acc-agent]
opt-level = "s"
codegen-units = 1
strip = true
