[package]
name = "acc"
version = "0.1.0"
edition = "2021"
description = "ACC fleet CLI — tasks, projects, agents, bus"

[[bin]]
name = "acc"
path = "src/main.rs"

[dependencies]
clap         = { version = "4",    features = ["derive", "env"] }
reqwest      = { version = "0.12", features = ["json", "stream"] }
tokio.workspace        = true
tokio-util.workspace   = true
futures-util.workspace = true
serde_json.workspace   = true
anyhow       = "1"
