[package]
name = "acc-model"
version = "0.1.0"
edition = "2021"
description = "Shared types for the ACC server and client libraries"

[lib]
name = "acc_model"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
