[package]
name = "slack-reflector"
version = "0.1.0"
edition = "2021"
description = "Slack workspace reflector - mirrors messages between paired Slack workspaces by name-matched users and channels"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures-util = "0.3"
dashmap = "6"
anyhow = "1"

