[package]
name = "acc-tools"
version = "0.1.0"
edition = "2021"
description = "Fleet operational tools for the ACC ecosystem"

[dependencies]
acc-client  = { path = "../acc-client" }
acc-model   = { path = "../acc-model" }
acc-qdrant  = { path = "../acc-qdrant" }
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", features = ["serde"] }
clap        = { version = "4", features = ["derive"] }
md5         = "0.7"
rusqlite    = { version = "0.31", features = ["bundled"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile    = "3"
which       = "6"
sha1        = "0.10"
