[package]
name = "clawchat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clawchat"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
gloo-net = { version = "0.5", features = ["http"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "EventSource",
    "MessageEvent",
    "ErrorEvent",
    "console",
    "Window",
    "Storage",
    "Document",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "Element",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
js-sys = "0.3"
