[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acc-client"
version = "0.1.0"
description = "HTTP client for the ACC fleet API (tasks, projects, queue, agents, bus SSE, memory)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "ACC"}]
# PEP 561 — this package ships inline type stubs (py.typed marker).
classifiers = ["Typing :: Typed"]
dependencies = [
    # httpx is used for both synchronous requests and the SSE streaming body
    # (httpx.Client.stream + iter_lines). The minimum version that ships the
    # stable streaming API is 0.27.
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
# Include the py.typed marker so type checkers recognise this as a typed package.
packages = ["acc_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = false
# Each module is in the same package; intra-package imports resolve naturally.
packages = ["acc_client"]
